bitbybit/tests/no_compile/invalid_bit_pos/invalid_bits_pos_array_u7.rs
use bitbybit::bitfield;

#[bitfield(u7, default = 0)]
struct Test {
    #[bits([0, 6..=7], rw)]
    multi_bit_field: u3,
}

fn main() {}
